--- a/public/styles.css
+++ b/public/styles.css
@@ -1,28 +1,28 @@
 body {
-    background-color: black;
+    background-color: rgb(61, 59, 59);
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     color: white;
     display: flex;
-    align-items: center;
     justify-content: center;
-    min-height: 100vh;
-}
-
-.title {
-    font-size: 2rem;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    padding-bottom: 5px;
-
-}
-.terminal-window {
-    width: 100vw;
+    align-items: center;
     height: 100vh;
-    border: solid white 5px;
-    text-align: center;
-    margin: auto;
+    width: 100vw;
+    border: solid 5px;
 }
+
+.terminal-window {
+    width: 80%;
+    height: 80%;
+    border: solid 5px white;
+
+}
+
+.stop-button {
+    width: 50px;
+    height: 50px;
+    background-color: white;
+}
+
